<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">appliFredi</string>
    <string name="hello_world">Hello world!</string>
    <string name="titre">Application frais déplacement</string>
    <string name="nom">Nom : </string>
    <string name="prenom">Prenom : </string>
    <string name="adresse">Adresse :</string>
    <string name="valider">Valider</string>
    <string name="title_activity_simulation">Simulation</string>
    <string name="title_activity_main_activity_simulation">MainActivity_simulation</string>
    <string name="title_activity_main_activity_historique">MainActivity_historique</string>
    <string name="title_activity_main_activity_pagecreationfraisdeplacement">MainActivity_pagecreationfraisdeplacement</string>
    <string name="title_activity_main_activity_modification">MainActivity_modification</string>
    <string name="title_activity_main_activity_menu">MainActivity_menu</string>
    <string name="titre2">Menu - FREDI</string>
    <string name="ajouterundeplacement">Ajouter un déplacement</string>
    <string name="historiquemodification">Historique / Modification</string>
    <string name="simulation">Simulation</string>
    <string name="title_activity_test">TEST</string>

</resources>
