<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txtTitreMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/titre2"
        android:textColor="@color/rouge"
        android:textSize="@dimen/dimension1" />

    <Button
        android:id="@+id/btnAjouterDsmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitreMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/ajouterundeplacement" />

    <Button
        android:id="@+id/btnHistorique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAjouterDsmenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/historiquemodification" />

    <Button
        android:id="@+id/btnSimuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHistorique"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/simulation" />

</RelativeLayout>